<resources>
    <string name="app_name">SMK BLK</string>

    <string name="daftar">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="about">About App</string>
    <string name="profile_sekolah">Profile Sekolah</string>

    <string name="input_karyawan">Input Data Karyawan</string>
    <string name="input_siswa">Input Data Siswa</string>
    <string name="view_karyawan">Lihat Data Siswa</string>
    <string name="view_siswa">Lihat Data Siswa</string>
    <string name="input_mapel">Daftar Mata Pelajaran</string>
    <string name="view_absen_karyawan">Absen Karyawan</string>
    <string name="view_absen_siswa">Absen Siswa</string>
    <string name="verifi_user">Verifikasi User</string>
    <string name="input_jadwal">Penjadwalan</string>
    <string name="daftar_guru">Daftar Guru</string>
    <string name="daftar_staf">Daftar Staf</string>
    <string name="daftar_karyawan">Daftar Karyawan</string>
    <string name="daftar_siswa">Daftar Siswa</string>
    <string name="data_satpam">Data Satpam</string>
    <string name="data_staf">Data Staf</string>

    <string name="gajih_satpam">Gajih Satpam</string>
    <string name="gajih_staf">Gajih Staf</string>

    <string name="profil_guru">Profil Guru</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="absen_siswa">Absensi Siswa</string>
    <string name="jadwal_ajar">Jadwal Mengajar</string>

    <string name="sejarah_sekolah">Sejarah Sekolah</string>
    <string name="prestasi_sekolah">Prestasi Sekolah</string>
    <string name="alamat_sekolah">Alamat Sekolah</string>
    <string name="visi_sekolah">Visi dan Misi</string>

    <string name="profil_siswa">Profil Siswa</string>

    <string name="kontak_sekolah">Kontak</string>
    <string name="data_siswa">Data Siswa</string>
    <string name="data_prestasi">Catatan Prestasi</string>
    <string name="beasiswa">Beasiswa</string>
    <string name="login">Log In</string>
    <string name="kesejahteraan">Kesejahteraan</string>

    <string name="login_desc">Masuk sekarang untuk menggunakan aplikasi</string>
    <string name="registered_desc">Masukan identitas diri anda untuk mendaftar</string>

    <string name="regist_desc">Daftarkan diri anda sekarang !</string>
    <string name="back_desc">Masuk sekarang jika anda sudah terdaftar !</string>

    <!--welcome screen-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Halo Pelajar!</string>
    <string name="slide_1_desc">Cara mudah management data dalam satu aplikasi!</string>

    <string name="title_activity_alamat">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--API GOOGLE MAPS KEY-->
    <string name="API_GoogleMaps" templateMergeStrategy="preserve" translatable="false">AIzaSyAUNc3gIKXfgIlF958XY49YS1uqnt6LIzo</string>

    <string-array name="StringSpinJabatan">
        <item>Kepala Sekolah</item>
        <item>Wakil Kepala Sekolah</item>
        <item>Waka Kurikulum</item>
        <item>Waka Kesiswaan</item>
        <item>Bendahara Sekolah</item>
        <item>Guru BK</item>
        <item>Guru</item>
        <item>Guru/Wali Kelas</item>
        <item>Guru/Operator</item>
        <item>Guru Matematika</item>
        <item>Guru Bhs Inggris</item>
        <item>Guru Bhs Indonesia</item>
        <item>Guru Fisika</item>
        <item>Guru Kimia</item>
        <item>Guru Teknik</item>
        <item>Guru Penjaskes</item>
        <item>Toolman/ADM</item>
        <item>Pelatih Bola</item>
        <item>Kaleb</item>
        <item>Kabeng Listrik</item>
        <item>Kabeng Otomatif</item>
        <item>Kajur Listrik</item>
        <item>Kajur TSM</item>
        <item>Kajur TKJ</item>
        <item>Kajur TKR</item>
        <item>Kajur MM</item>
        <item>Kepala TU</item>
        <item>Staff Tu</item>
        <item>Security Tu</item>
        <item>Kabeng Otomatif</item>
        <item>Teknisi Bengkel TSM</item>
        <item>Kalab TKJ &amp; MM</item>
        <item>Perawat UKS</item>
    </string-array>

    <string-array name="StringSpinStatus">
        <item>PNS</item>
        <item>GTY</item>
        <item>GTT</item>
        <item>PTT</item>
        <item>Guru Bantu Pusat</item>
        <item>Guru Bantu Sekolah</item>
        <item>Tenaga Honorer</item>
    </string-array>

    <string-array name="StringTahun">
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1995</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>

    </string-array>


    <string-array name="StringGolongan">
        <item>III A</item>
        <item>II D</item>
        <item>II C</item>
    </string-array>



</resources>
